# dqk

./: Cargo.toml  DESIGN.md  README.md  SYNTAX.md  out.txt
crates/dqk-ast/: Cargo.toml
crates/dqk-ast/src/: expr.rs  lib.rs  span.rs  stmt.rs  token.rs  token_types.rs
crates/dqk-error/: Cargo.toml
crates/dqk-error/src/: error.rs
crates/dqk-macro/: Cargo.toml
crates/dqk-macro/src/: lib.rs  spanned.rs
crates/dqk-parser/: Cargo.toml
crates/dqk-parser/src/: error.rs  lib.rs  parse.rs  parser.rs  span.rs  string_allocator.rs  token.rs
crates/dqk-parser/src/ast/: delim.rs  expr.rs  mod.rs  punctuated.rs  stmt.rs  ty.rs
crates/dqk-parser/src/ast/parse/: expr.rs  mod.rs  stmt.rs  ty.rs
src/: main.rs
tests/: ping.dqk
