[package]
name = "dqk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/*"]

[dependencies] 
# dqk
dqk-ast = { version = "0.1.0", path = "crates/dqk-ast" }
dqk-error = { version = "0.1.0", path = "crates/dqk-error" }
dqk-parser = { version = "0.1.0", path = "crates/dqk-parser" }

# other
clap = { version = "^3.1.0", features = ["derive"] }